# feedback-to-me

./: .env.example  .gitignore  Dockerfile  Makefile  OAUTH_SETUP.md  OPENROUTER_MIGRATION.md  README.md  app.py  config.py  confirmation_email_template.txt  docker-compose.yml  feedback_email_template.txt  litestream.yml  llm_functions.py  main.py  models.py  pages.py  password_reset_email_template.txt  pyproject.toml  report_ready_email_template.txt  utils.py
routes/: admin.py  auth.py  feedback.py  payments.py
scripts/: init_db.py
services/: email_service.py  payment_service.py
static/: styles.css
tests/: test_auth.py  test_main.py
utils/: validators.py
