[project]
name = "feedback-to-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "langchain-openai>=0.2.14",
    "openai>=1.59.6",
    "langchain>=0.3.17",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.12.1",
    "stripe>=11.5.0",
    "slowapi>=0.1.9",
]
